2010-06-12  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* dupecheck.c:
	    Shrink dupecheck to 16 kB per alloc arena (from 256 KB).
	    That should be enough for a very busy 1200 bps channel,
	    and probably even for a 9600 bps channel.

	* filter.c:
	    Shrink filter cell storage to 4 kB per alloc arena (from 512 kB!)

	* historydb.c:
	    Shrink historydb cell storage to 32 kB per alloc arena (from 128 kB)

	* debian/aprx.init:
	    Pleasing init-script behaviour during package re-install

	* telemetry.c, doc/aprx-manual.odt:
	    Stagger telemetry transmissions a bit.
	    All RF reported telemetry sources are reported at the same time,
	    but telemetry data is time-wise separated from labels, and labels
	    are sent so that 3 different labels are sent every 2 hours, and
	    total label carouselle time is 6 hours.

	* aprx.c:
	    Giving this version code: APRX1K

	* telemetry.c:
	    Correct AX.25 data frame for RF transmission

	* telemetry.c, config.c, aprx.h, doc/aprx-manual.odt,
	  aprx.conf.in, aprx-complex.conf.in:
	    New <telemetry> config section, be able to tx
	    telemetry to RF ports.

	* beacon.c:
	    Error reporting additions.

	* erlang.c, aprx-stat.c, aprx.h, telemetry.c:
	    Use pre-processor conditionals to select only small
	    subset of storage and processing codes used for
	    erlang data in embedded mode.

	* parse_aprs.c:
	    Compile warning silencing.

2010-06-10  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* kiss.c, ttyreader.c, dprsgw.c, aprx.h:
	    Tracked specification origins of each of the three
	    different CRC-16 calculations that this code has.
	    What was called "crc_ccitt" was in fact something
	    totally different: the SMACK CRC16.

2010-06-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* README, ROADMAP, TODO, INSTALL, PROTOCOLS:
	    Updates on plans and rough guides.

	* TIMESTAMP-AT-APRSIS, timestamp.c:
	    A proposal to put about 1ms resolution timestamps